TEST_PROGRAMS/VALID/09/index_exp.go
package index_exp

func main() {
    a := b[0]
    a[x] = 3
}
