TEST_PROGRAMS/INVALID/11/test11.go
package main

func foo() {
	x[1020202030303030303030303030303030312] 
}
